kustomize/base/wordpress/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordpress
    spec:
      volumes:
        - name: wp-content
          persistentVolumeClaim:
            claimName: wp-content
      containers:
        - name: wordpress-container
          image: quay.io/pflaeging/wordpress-okd:latest
          volumeMounts:
            - name: wp-content
              mountPath: /opt/wordpress/wp-content/
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
