kustomize/base/wordpress/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress
spec:
  ports:
    - name: http-alternate
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: wordpress
  type: ClusterIP
  sessionAffinity: None
