kustomize/base/wordpress/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wordpress
spec:
  to:
    kind: Service
    name: $(ROUTE_SERVICE)
    weight: 100
  port:
    targetPort: http-alternate
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
